fix(MastheadSearch): keep tooltip, change alignment

--- a/packages/styles/scss/components/masthead/_masthead-search.scss
+++ b/packages/styles/scss/components/masthead/_masthead-search.scss
@@ -129,15 +129,6 @@
     .#{$prefix}--header__search--search,
     .#{$prefix}--header__search--close {
       color: $icon-01;
-
-      // prevent tooltip from showing on hover
-      &.#{$prefix}--btn--icon-only::before {
-        display: none;
-      }
-
-      span {
-        visibility: hidden;
-      }
     }
   }
 
